Refactored to use Docker client' '

--- a/docker/client/index.html
+++ b/docker/client/index.html
@@ -12,6 +12,7 @@
         <div id="widget-container"></div>
         <div class="centred">
             <textarea id="details" name="details" rows="10" cols="50">Messages</textarea><br/>
+            <button id="details" value="Details" onclick="loaddetails()"/>
         </div>
     </body>
 </html>
